css/custom.css
body {
    height: 100%;
    width: 100%;
    position: absolute;
}
.container {
    position: relative;;
    width: 100%;
    height: 100%;
}

#sidebar {
    position: absolute;
    top: 0;
    right: 0;
    width: 300px;
    height: 100%;
    box-sizing: border-box;
    background:#007777;
    overflow-y: auto;
    overflow-x: hidden;
}

#map-canvas {
    width: auto;
    height: 100%;
    margin-right: 300px;
}

#legend {
    color: #000000;
    background-color: #ffff88;
    width: 250px;
    padding: 5px 5px 5px 5px;
    margin-left: 5px;
    margin-top: 10px;
    display: none;
}

.legend-box {
    width: 10px;
    height: 10px;
    display: inline-block;
}

#graph-popup {
    color:black;
    background-color:white;
    position:fixed;
    top:0;
    bottom:0;
    left:0;
    right:0;
    margin:auto;
    border:5px solid;
    border-color: #007777;
    padding:10px;
    display: none;

    overflow-y: hidden;
    overflow-x: auto;
}

#graph-close-button {
    position: absolute;
    bottom: 0;
    left: 0;
}

.menu-button {
    background-color: #007777;
    border-style: solid;
    border-width: 5px;
    border-color: #ffffff;
    width: 290px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.menu-content {
    background-color: #009999;
    border-style: solid;
    border-width: 5px;
    border-color: #aaaaaa;
    width: 270px;
    display: none;
    color: #ffffff;
    padding: 10px 10px 10px 10px;
}

